# SoulInspector

./: .gitignore  .gitmodules  CMakeLists.txt
main/: CMakeLists.txt  si_main.cpp  uart_config_broker.cpp  uart_data_broker.cpp  uart_data_characteristic.cpp
main/driver/: uart_ctrl.cpp  uart_ctrl.hpp  uart_data_broker.hpp
main/includes/: uart_config_broker.hpp  uart_data_broker.hpp  uart_data_characteristic.hpp
main/misc/: config_constants.hpp  eternal.hpp
main/protocol/: ble_manager.cpp  ble_manager.hpp  chunk_codec.cpp  chunk_codec.hpp  config_handler.cpp  config_handler.hpp  dev_info_handler.cpp  dev_info_handler.hpp  time_sync_handler.cpp  time_sync_handler.hpp  uart_handler.cpp  uart_handler.hpp
main/storage/: config_manager.cpp  config_manager.hpp
